// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Autocomplete Airport 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "width": 244,
      }
    }
  >
    <div
      className="sc-kjoXOD lUKdb"
    >
      <div
        className="react-autosuggest__container"
      >
        <div
          className="sc-gipzik dNzsRJ"
        >
          <textarea
            aria-activedescendant={null}
            aria-autocomplete="list"
            aria-expanded={false}
            aria-haspopup={false}
            aria-owns="react-autowhatever-1"
            autoCapitalize="sentences"
            autoComplete="off"
            autoFocus={true}
            className="react-autosuggest__input sc-csuQGl XHQvw"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder="Туда"
            role="combobox"
            rows="1"
            type="text"
            value=""
            wrap="off"
          />
          <div
            className="airport-input__geo sc-Rmtcm fZdPuk"
          >
            <div
              className="sc-hzDkRC cFCdAE"
            >
              
            </div>
            
            
          </div>
          <div
            className="sc-fBuWsC gHcHIc"
          >
            
          </div>
        </div>
        <div
          className="react-autosuggest__suggestions-container"
          id="react-autowhatever-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Blocks FilterSection 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "width": 252,
      }
    }
  >
    <section
      className="sc-ifAKCX mmAti"
    >
      <header
        className="sc-EHOje iwBHie"
      >
        <div>
          Пересадки
        </div>
        <div>
          Сбросить
        </div>
      </header>
      <div
        className="sc-bZQynM bdCSpS"
      >
        <div>
          <div>
            <label
              className="sc-kAzzGY fDOeck"
              disabled={false}
            >
              <span
                checked={false}
                className="checkbox sc-jzJRlG dREzXp"
                disabled={false}
              >
                <input
                  checked={false}
                  className="sc-jTzLTM izYhGY"
                  disabled={false}
                  name=""
                  onChange={[Function]}
                  type="checkbox"
                />
              </span>
              <span
                className="label-text sc-cSHVUG jkPykj"
                disabled={false}
              >
                Без пересадок
              </span>
            </label>
          </div>
          <div>
            <label
              className="sc-kAzzGY fDOeck"
              disabled={false}
            >
              <span
                checked={false}
                className="checkbox sc-jzJRlG dREzXp"
                disabled={false}
              >
                <input
                  checked={false}
                  className="sc-jTzLTM izYhGY"
                  disabled={false}
                  name=""
                  onChange={[Function]}
                  type="checkbox"
                />
              </span>
              <span
                className="label-text sc-cSHVUG jkPykj"
                disabled={false}
              >
                1 пересадка
              </span>
            </label>
          </div>
          <div>
            <label
              className="sc-kAzzGY fDOeck"
              disabled={false}
            >
              <span
                checked={false}
                className="checkbox sc-jzJRlG dREzXp"
                disabled={false}
              >
                <input
                  checked={false}
                  className="sc-jTzLTM izYhGY"
                  disabled={false}
                  name=""
                  onChange={[Function]}
                  type="checkbox"
                />
              </span>
              <span
                className="label-text sc-cSHVUG jkPykj"
                disabled={false}
              >
                2 и более
              </span>
            </label>
          </div>
        </div>
      </div>
      <div
        className="rc-collapse"
        style={undefined}
      >
        <div
          className="rc-collapse-item sc-iwsKbI hIrClY sc-htpNat jpYvPn"
          id={undefined}
          style={undefined}
        >
          <div
            aria-expanded={false}
            className="rc-collapse-header"
            onClick={[Function]}
            role="tab"
          >
            <div
              className="sc-htoDjs fYyxaZ"
            >
              <div
                className="sc-jbKcbu epyocb"
              >
                Пересадки
              </div>
              <svg
                className="sc-dnqmqq htZMOn icon-inherit-color sc-bxivhb ljgSYE"
                size="xxsmall"
                style={undefined}
              >
                <use
                  xlinkHref="#kb_arrow-down"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Blocks Styled Tabs 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    className="rc-tabs rc-tabs-top"
    style={Object {}}
  >
    <div
      className={undefined}
    >
      <span
        aria-disabled={undefined}
        className="sc-kvZOFW bkZmTX"
        onFocus={[Function]}
        role="tab"
        tabIndex="0"
      >
        1. Бронирование
      </span>
      <span
        aria-disabled={undefined}
        className="sc-kvZOFW fJyFPC"
        onFocus={[Function]}
        role="tab"
        tabIndex="0"
      >
        2. Оплата
      </span>
      <span
        aria-disabled={undefined}
        className="sc-kvZOFW bkZmTX"
        onFocus={[Function]}
        role="tab"
        tabIndex="0"
      >
        3. Получение билета
      </span>
    </div>
    <div
      className="rc-tabs-content rc-tabs-content-no-animated"
      style={undefined}
    >
      <div
        aria-hidden="true"
        className="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        role="tabpanel"
        style={undefined}
      />
      <div
        aria-hidden="false"
        className="rc-tabs-tabpane rc-tabs-tabpane-active"
        role="tabpanel"
        style={undefined}
      >
        Second tab
      </div>
      <div
        aria-hidden="true"
        className="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        role="tabpanel"
        style={undefined}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Box Defalut 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    className="sc-bwzfXH gSYwXg"
  >
    <p>
      box content
    </p>
  </div>
</div>
`;

exports[`Storyshots Buttons Default 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <button
    className="no-global sc-gZMcBi gBfaHm"
    disabled={undefined}
    size="normal"
  >
    <span
      className="sc-gqjmRU hdtzDm"
      size="normal"
    >
      Авиабилеты
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons Disabled 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <button
    className="no-global sc-gZMcBi keJrks"
    disabled={true}
    size="normal"
  >
    <span
      className="sc-gqjmRU hdtzDm"
      size="normal"
    >
      Cake is a lie
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons Icon-only button 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <button
    className="no-global sc-gZMcBi bqDqgc"
    disabled={undefined}
    size="large"
  >
    <span
      className="sc-VigVT botnlB"
      size="large"
    >
      <svg
        className="sc-bxivhb deayMY"
        size="normal"
        style={undefined}
      >
        <use
          xlinkHref="#kb_carrot_monochrome"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons Sizes 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <button
    className="no-global sc-gZMcBi eYyVYF"
    disabled={undefined}
    size="large"
  >
    <span
      className="sc-gqjmRU hdtzDm"
      size="large"
    >
      Бальшой
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons With icons 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <button
    className="no-global sc-gZMcBi klZNue"
    disabled={undefined}
    size="normal"
  >
    <span
      className="sc-VigVT cerRmq"
      size="normal"
    >
      <svg
        className="sc-bxivhb kLyRqs"
        size="normal"
        style={undefined}
      >
        <use
          xlinkHref="#kb_plane"
        />
      </svg>
    </span>
    <span
      className="sc-gqjmRU kSqCP"
      size="normal"
    >
      Авиабилеты
    </span>
    <span
      className="sc-VigVT cerRmq"
      size="normal"
    >
      <svg
        className="sc-bxivhb deayMY"
        size="normal"
        style={undefined}
      >
        <use
          xlinkHref="#kb_hand-baggage"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Storyshots Checkbox default 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div>
    <label
      className="sc-kAzzGY fDOeck"
      disabled={false}
    >
      <span
        checked={false}
        className="checkbox sc-jzJRlG dREzXp"
        disabled={false}
      >
        <input
          checked={false}
          className="sc-jTzLTM izYhGY"
          disabled={false}
          name=""
          onChange={[Function]}
          type="checkbox"
        />
      </span>
      <span
        className="label-text sc-cSHVUG jkPykj"
        disabled={false}
      >
        Авиабилеты
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots Checkbox disabled 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <label
    className="sc-kAzzGY fLUfjB"
    disabled={true}
  >
    <span
      checked={false}
      className="checkbox sc-jzJRlG dvWCAm"
      disabled={true}
    >
      <input
        checked={false}
        className="sc-jTzLTM izYhGY"
        disabled={true}
        name=""
        onChange={[Function]}
        type="checkbox"
      />
    </span>
    <span
      className="label-text sc-cSHVUG hHvAiZ"
      disabled={true}
    >
      Авиабилеты
    </span>
  </label>
</div>
`;

exports[`Storyshots Collapse Accordion 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "width": "252px",
      }
    }
  >
    <div
      className="rc-collapse"
      style={undefined}
    >
      <div
        className="rc-collapse-item sc-htpNat jpYvPn"
        id={undefined}
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Foo
        </div>
      </div>
      <div
        className="rc-collapse-item sc-htpNat jpYvPn"
        id={undefined}
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Bar
        </div>
      </div>
      <div
        className="rc-collapse-item sc-htpNat jpYvPn"
        id={undefined}
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Mdaaaaa
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Collapse Default 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "width": "252px",
      }
    }
  >
    <div
      className="rc-collapse"
      style={undefined}
    >
      <div
        className="rc-collapse-item sc-htpNat jpYvPn"
        id={undefined}
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Foo
        </div>
      </div>
      <div
        className="rc-collapse-item sc-htpNat jpYvPn"
        id={undefined}
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Bar
        </div>
      </div>
      <div
        className="rc-collapse-item sc-htpNat jpYvPn"
        id={undefined}
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Mdaaaaa
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Collapse Default active panel 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "width": "252px",
      }
    }
  >
    <div
      className="rc-collapse"
      style={undefined}
    >
      <div
        className="rc-collapse-item rc-collapse-item-active sc-htpNat jpYvPn"
        id={undefined}
        style={undefined}
      >
        <div
          aria-expanded={true}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Foo
        </div>
        <div
          className="rc-collapse-content rc-collapse-content-active"
          role="tabpanel"
        >
          <div
            className="rc-collapse-content-box"
          >
            
              A dog is a type of domesticated animal.
              Known for its loyalty and faithfulness,
              it can be found as a welcome guest in many households across the world.
            
          </div>
        </div>
      </div>
      <div
        className="rc-collapse-item sc-htpNat jpYvPn"
        id={undefined}
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Bar
        </div>
      </div>
      <div
        className="rc-collapse-item sc-htpNat jpYvPn"
        id={undefined}
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Mdaaaaa
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ControlsGroup Different controls group 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    className="sc-hMqMXs kiEKjH"
  >
    <button
      className="no-global sc-gZMcBi egQBpH"
      disabled={undefined}
      size="large"
    >
      <span
        className="sc-gqjmRU hdtzDm"
        size="large"
      >
        Пойти
      </span>
    </button>
    <div
      className="sc-gipzik bXTdGA"
    >
      <textarea
        autoCapitalize="sentences"
        autoComplete="off"
        className="sc-csuQGl dOjQVy"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={true}
        rows="1"
        value="Шереметьево"
        wrap="off"
      />
      <div
        className="airport-input__geo sc-Rmtcm gEVxKR"
      >
        <div
          className="sc-hzDkRC cFCdAE"
        >
          Шереметьево
        </div>
        
        
      </div>
      <div
        className="sc-fBuWsC iAVNCH"
      >
        SVO
      </div>
    </div>
    <button
      className="no-global sc-gZMcBi cNYsWJ"
      disabled={undefined}
      size="large"
    >
      <span
        className="sc-gqjmRU hdtzDm"
        size="large"
      >
        Найти
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots ControlsGroup Inputs group 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    className="sc-hMqMXs kiEKjH"
  >
    <div
      className="sc-gipzik fbbbnv"
    >
      <textarea
        autoCapitalize="sentences"
        autoComplete="off"
        className="sc-csuQGl fVBLcb"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={true}
        rows="1"
        value="Шереметьево"
        wrap="off"
      />
      <div
        className="airport-input__geo sc-Rmtcm fZdPuk"
      >
        <div
          className="sc-hzDkRC cFCdAE"
        >
          Шереметьево
        </div>
        
        
      </div>
      <div
        className="sc-fBuWsC iAVNCH"
      >
        SVO
      </div>
    </div>
    <div
      className="sc-kEYyzF juTNNb"
      onClick={[Function]}
    >
      <svg
        className="controls-group__swap sc-kkGfuU fpmnQg icon-inherit-color sc-bxivhb ljgSYE"
        size="xxsmall"
        style={undefined}
      >
        <use
          xlinkHref="#kb_left-right"
        />
      </svg>
    </div>
    <div
      className="sc-gipzik fYwGTS"
    >
      <textarea
        autoCapitalize="sentences"
        autoComplete="off"
        className="sc-csuQGl dtrAAI"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        rows="1"
        value="Несуществующий город"
        wrap="off"
      />
      <div
        className="airport-input__geo sc-Rmtcm gEVxKR"
      >
        <div
          className="sc-hzDkRC cFCdAE"
        >
          Несуществующий город
        </div>
        
        
      </div>
      <div
        className="sc-fBuWsC gHcHIc"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DateRange DateRange 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    className="sc-cMljjf jIRDym"
  >
    <div
      className="DateInput--startDate--placeholder DateInput--endDate--placeholder"
    >
      <div
        className="DateRangePicker"
      >
        <div>
          <div
            className="DateRangePickerInput"
          >
            <div
              className="DateInput"
            >
              <input
                aria-describedby=""
                aria-label="Туда"
                autoComplete="off"
                className="DateInput__input"
                disabled={false}
                id="startDate"
                name="startDate"
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="Туда"
                readOnly={false}
                required={false}
                type="text"
                value=""
              />
              
              <div
                className="DateInput__display-text"
              >
                Туда
              </div>
            </div>
            <div
              className="DateRangePickerInput__arrow"
            >
              <span />
            </div>
            <div
              className="DateInput"
            >
              <input
                aria-describedby=""
                aria-label="Обратно"
                autoComplete="off"
                className="DateInput__input"
                disabled={false}
                id="endDate"
                name="endDate"
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="Обратно"
                readOnly={false}
                required={false}
                type="text"
                value=""
              />
              
              <div
                className="DateInput__display-text"
              >
                Обратно
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Dropdown Defalut 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <onClickOutside-Mock-Decorator>
    <div
      className="sc-jWBwVP kxFoQB"
    >
      <div
        onClick={[Function]}
      >
        click to open  
        <button
          className="no-global sc-gZMcBi gBfaHm"
          disabled={undefined}
          size="normal"
        >
          <span
            className="sc-gqjmRU hdtzDm"
            size="normal"
          >
            click
          </span>
        </button>
      </div>
    </div>
  </onClickOutside-Mock-Decorator>
</div>
`;

exports[`Storyshots Fluid layout Aside on top with beforeSection prop 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "width": "100vw",
      }
    }
  >
    <div
      className="sc-iAyFgw jvxXAV"
    >
      <div
        className="sc-hSdWYo EiRZm"
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "background": "rgba(35, 194, 86, .4)",
              "display": "flex",
              "height": 140,
              "justifyContent": "center",
            }
          }
        >
          Main content
        </div>
      </div>
      <div
        className="sc-eHgmQL gBomhi"
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "background": "rgba(230, 73, 38, .4)",
              "display": "flex",
              "height": 140,
              "justifyContent": "center",
            }
          }
        >
          Sidebar
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Fluid layout Single column 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "width": "100vw",
      }
    }
  >
    <div
      className="sc-cvbbAY cAqpXD"
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "background": "rgba(35, 194, 86, .4)",
            "display": "flex",
            "height": 140,
            "justifyContent": "center",
          }
        }
      >
        Main content
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Fluid layout Two columns 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "width": "100vw",
      }
    }
  >
    <div
      className="sc-iAyFgw jvxXAV"
    >
      <div
        className="sc-hSdWYo EiRZm"
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "background": "rgba(35, 194, 86, .4)",
              "display": "flex",
              "height": 140,
              "justifyContent": "center",
            }
          }
        >
          Main content
        </div>
      </div>
      <div
        className="sc-eHgmQL bvCXpb"
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "background": "rgba(230, 73, 38, .4)",
              "display": "flex",
              "height": 140,
              "justifyContent": "center",
            }
          }
        >
          Sidebar
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Icon Medium Icon with stroke & fill 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <svg
    className="sc-bxivhb fIrOio"
    size="medium"
    style={undefined}
  >
    <use
      xlinkHref="#kb_airport-change"
    />
  </svg>
</div>
`;

exports[`Storyshots Icon Small Icon with stroke 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <svg
    className="sc-bxivhb kdfCdt"
    size="small"
    style={undefined}
  >
    <use
      xlinkHref="#kb_checkbox"
    />
  </svg>
</div>
`;

exports[`Storyshots PassengerPicker Defalut 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    className="sc-cHGsZl ipxiiD"
  >
    <div>
      <div
        className="sc-TOsTZ gNxWLU"
      >
        Взрослые
      </div>
      <div
        className="sc-kgAjT kuboaN"
      >
        До 2 лет, без места
      </div>
    </div>
    <div
      className="sc-hmzhuo jTPNxq"
    >
      <span
        className="sc-cJSrbW bVkicF"
      >
        1
      </span>
      <div
        className="sc-frDJqD iDQvIn"
      >
        <button
          className="no-global sc-ksYbfQ hUUMUs sc-gZMcBi dkdJqv"
          disabled={true}
          onClick={[Function]}
          size="normal"
        >
          <span
            className="sc-VigVT cerRmq"
            size="normal"
          >
            <svg
              className="sc-bxivhb hLuXwK"
              size="normal"
              style={undefined}
            >
              <use
                xlinkHref="#kb_minus"
              />
            </svg>
          </span>
        </button>
        <button
          className="no-global sc-ksYbfQ hUUMUs sc-gZMcBi ezVieq"
          disabled={false}
          onClick={[Function]}
          size="normal"
        >
          <span
            className="sc-VigVT cerRmq"
            size="normal"
          >
            <svg
              className="sc-bxivhb hLuXwK"
              size="normal"
              style={undefined}
            >
              <use
                xlinkHref="#kb_plus"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Slider Slider 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "width": "252px",
      }
    }
  >
    <div
      className="rheostat rheostat-horizontal sc-chPdSV ijufRu"
      onClick={[Function]}
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <div
        className="rheostat-background"
      />
      <div>
        <div
          className="sc-dxgOiQ inwCPG"
          onMouseDown={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "left": "0%",
              "position": "absolute",
              "zIndex": 2,
            }
          }
        >
          <span
            className="sc-eNQAEJ dUIGOF"
            color="black"
            onClick={undefined}
          >
            <span
              className="sc-jKJlTe kxCGof"
            >
              0
            </span>
          </span>
          <span>
            <span
              aria-disabled={false}
              aria-valuemax={5}
              aria-valuemin={0}
              aria-valuenow={0}
              className="rheostat-handle sc-kgoBCf hNahHA"
              data-handle-key={0}
              onClick={undefined}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
              role="slider"
              style={
                Object {
                  "left": "0%",
                  "position": "absolute",
                }
              }
              tabIndex={0}
            />
          </span>
        </div>
      </div>
      <div>
        <div
          className="sc-dxgOiQ inwCPG"
          onMouseDown={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "left": "100%",
              "position": "absolute",
              "zIndex": 2,
            }
          }
        >
          <span
            className="sc-eNQAEJ dUIGOF"
            color="black"
            onClick={undefined}
          >
            <span
              className="sc-jKJlTe kxCGof"
            >
              10
            </span>
          </span>
          <span>
            <span
              aria-disabled={false}
              aria-valuemax={5}
              aria-valuemin={0}
              aria-valuenow={5}
              className="rheostat-handle sc-kgoBCf hNahHA"
              data-handle-key={1}
              onClick={undefined}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
              role="slider"
              style={
                Object {
                  "left": "100%",
                  "position": "absolute",
                }
              }
              tabIndex={0}
            />
          </span>
        </div>
      </div>
      <span
        className="rheostat-progress sc-kGXeez jfddOm"
        style={
          Object {
            "left": "0%",
            "width": "100%",
          }
        }
      />
      <span
        className="sc-kpOJdX Ytwjx"
        style={
          Object {
            "left": "0%",
            "position": "absolute",
          }
        }
      >
        0
      </span>
      <span
        className="sc-kpOJdX eMRGil"
        style={
          Object {
            "left": "20%",
            "position": "absolute",
          }
        }
      >
        1
      </span>
      <span
        className="sc-kpOJdX hpMLkA"
        style={
          Object {
            "left": "40%",
            "position": "absolute",
          }
        }
      >
        2
      </span>
      <span
        className="sc-kpOJdX iATEkh"
        style={
          Object {
            "left": "60%",
            "position": "absolute",
          }
        }
      >
        3
      </span>
      <span
        className="sc-kpOJdX ejiqYD"
        style={
          Object {
            "left": "80%",
            "position": "absolute",
          }
        }
      >
        4
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip bottom tooltip 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "center",
        "minHeight": "100vh",
      }
    }
  >
    <div
      className="sc-dxgOiQ fLAzQI"
      onMouseDown={undefined}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "zIndex": undefined,
        }
      }
    >
      <span
        className="sc-eNQAEJ bYcXLD"
        color="red"
        onClick={undefined}
      >
        <span
          className="sc-jKJlTe kCplyc"
        >
          foobar
        </span>
        <span
          className="sc-ckVGcZ clgMAH"
        >
          ?
        </span>
      </span>
      <span>
        Tooltip bottom text
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip green tooltip 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "center",
        "minHeight": "100vh",
      }
    }
  >
    <div
      className="sc-dxgOiQ fLAzQI"
      onMouseDown={undefined}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "zIndex": undefined,
        }
      }
    >
      <span
        className="sc-eNQAEJ gpBpl"
        color="green"
        onClick={undefined}
      >
        <span
          className="sc-jKJlTe kxCGof"
        />
      </span>
      <span>
        Tooltip text
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip left tooltip 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "center",
        "minHeight": "100vh",
      }
    }
  >
    <div
      className="sc-dxgOiQ fLAzQI"
      onMouseDown={undefined}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "zIndex": undefined,
        }
      }
    >
      <span
        className="sc-eNQAEJ cNPDIk"
        color={undefined}
        onClick={undefined}
      >
        <span
          className="sc-jKJlTe kxCGof"
        />
      </span>
      <span>
        Tooltip text
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip red tooltip 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "center",
        "minHeight": "100vh",
      }
    }
  >
    <div
      className="sc-dxgOiQ fLAzQI"
      onMouseDown={undefined}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "zIndex": undefined,
        }
      }
    >
      <span
        className="sc-eNQAEJ jJMARe"
        color="red"
        onClick={undefined}
      >
        <span
          className="sc-jKJlTe kxCGof"
        />
      </span>
      <span>
        Tooltip text
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip right tooltip 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "center",
        "minHeight": "100vh",
      }
    }
  >
    <div
      className="sc-dxgOiQ fLAzQI"
      onMouseDown={undefined}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "zIndex": undefined,
        }
      }
    >
      <span
        className="sc-eNQAEJ AYzVp"
        color={undefined}
        onClick={undefined}
      >
        <span
          className="sc-jKJlTe kxCGof"
        />
      </span>
      <span>
        Tooltip text
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip tooltip with left icon 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "center",
        "minHeight": "100vh",
      }
    }
  >
    <div
      className="sc-dxgOiQ fLAzQI"
      onMouseDown={undefined}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "zIndex": undefined,
        }
      }
    >
      <span
        className="sc-eNQAEJ iosfMy"
        color={undefined}
        onClick={undefined}
      >
        <span
          className="sc-ckVGcZ clgMAH"
        >
          ?
        </span>
        <span
          className="sc-jKJlTe kJAArO"
        />
      </span>
      <span>
        Tooltip text
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip tooltip with right icon 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "center",
        "minHeight": "100vh",
      }
    }
  >
    <div
      className="sc-dxgOiQ fLAzQI"
      onMouseDown={undefined}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "zIndex": undefined,
        }
      }
    >
      <span
        className="sc-eNQAEJ jBnWry"
        color={undefined}
        onClick={undefined}
      >
        <span
          className="sc-jKJlTe kCplyc"
        />
        <span
          className="sc-ckVGcZ clgMAH"
        >
          ?
        </span>
      </span>
      <span>
        Tooltip text
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip top tooltip 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "center",
        "minHeight": "100vh",
      }
    }
  >
    <div
      className="sc-dxgOiQ fLAzQI"
      onMouseDown={undefined}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "zIndex": undefined,
        }
      }
    >
      <span
        className="sc-eNQAEJ dUIGOF"
        color="black"
        onClick={undefined}
      >
        <span
          className="sc-jKJlTe kxCGof"
        >
          foobar
        </span>
      </span>
      <span>
        Tooltip top text
      </span>
    </div>
  </div>
</div>
`;
